set(COMMON_SRC
  access_pattern.c
  access_pattern.h
  barrier.c
  barrier.h
  datapatterns.c
  debug.c
  end_to_end.h
  heartbeat.h
  interactive.h
  lockstep.h
  mainpage.h
  memory.c
  net_utils.h
  nt_unix_compat.h
  parse.h
  processor.c
  results.h
  sg.h
  sgio.h
  target_data.c
  target_offset_table.h
  timestamp.c
  xdd_base_version.h
  xint.h
  xint_barrier.h
  xint_common.h
  xint_datapatterns.h
  xint_extended_stats.h
  xint_global_data.c
  xint_global_data.h
  xint_misc.h
  xint_nclk.c
  xint_nclk.h
  xint_plan.h
  xint_prototypes.h
  xint_read_after_write.h
  xint_restart.h
  xint_semaphore.h
  xint_target_counters.h
  xint_task.h
  xint_td.h
  xint_throttle.h
  xint_timestamp.h
  xint_triggers.h
  xint_wd.h
  )

add_library(common OBJECT ${COMMON_SRC})
